# censorlab

./: .dockerignore  .gitignore  .gitmodules  ;  Cargo.toml  README.md  censor.toml  flake.nix  nftables.sh  set_permissions.sh
.cargo/: config.toml
.github/workflows/: rust.yml  website.yml
artifact/: README.md
censor-scripts/cl-python/: null.py  shadowsocks_ml.py
demos/: README.md
demos/dns/: censor.toml  dns.py
demos/dns_blocking/: dns.py
demos/http_blocking/: censor.toml  http.py
demos/https_blocking/: censor.toml  https.py
demos/https_blocking_tls/: censor.toml  https_tls.py
demos/ip_blocking/: censor.toml  ip_blocking.py
demos/mega_gfw/: censor.toml  mega_gfw.py
demos/model/: censor.py  censor.toml  flake.nix  generate_model.ipynb  model.onnx  model.py  utils.py
demos/null/: censor.toml
demos/print/: censor.toml  print.py
demos/quic_blocking/: censor.toml  quic.py
demos/shadowsocks_gfw/: censor.toml  shadowsocks.py
demos/shadowsocks_poisoned/: censor.toml
docker/: Dockerfile  censorlab.sh  docker-compose.yml
docs/: index.html  robots.txt  search_index.en.js  sitemap.xml  style.css
docs/docs/: index.html
docs/vm-info/: index.html
docs_src/: config.toml
docs_src/content/: _index.md  docs.md  vm_info.md
docs_src/sass/: style.scss
docs_src/static/: webfonts
docs_src/templates/: base.html  docs.html  index.html
experiments/: Dockerfile  README.md  docker-compose.yml  results.tex  todo.md
experiments/01_http_keyword/: censor.cl  censor.py  censor.toml  censor_lang.toml
experiments/02_dns_injection/: censor.cl  censor.py  censor.toml  censor_lang.toml
experiments/03_tls_sni/: censor.cl  censor.py  censor.toml  censor_lang.toml
experiments/04_shadowsocks/: censor.cl  censor.py  censor.toml  censor_lang.toml
experiments/05_ml_classification/: censor.cl  censor.py  censor.toml  censor_lang.toml  model.onnx  train_model.py
experiments/06_model_extraction/: censor.cl  censor.py  censor.toml  censor_lang.toml
experiments/common/: analysis.py
experiments/scripts/: aggregate_results.py  compute_pcap_accuracy.py  run_all.sh  run_all_docker.sh  run_live_eval_docker.sh
homework/: main.tex  references.bib
models/poison_test/: poisoned.json  poisoned.onnx.ml
src/: arp.rs  config.rs  epoll.rs  ipc.rs  lib.rs  sys.rs  transport.rs  watermark.rs
src/application/: dns.rs  mod.rs  quic.rs  tls.rs
src/censor/: filter.rs  mod.rs  nfq.rs  pcap.rs  wire.rs
src/model/: mod.rs  onnx.rs
src/program/: config.rs  env.rs  mod.rs  packet.rs  pcap.rs  (+2 more)
tests/: pcap_integration.rs
vm/: .gitignore  README.md  configuration.nix  hardware-aarch64.nix  hardware-x8664.nix  home.nix  id_ed25519.pub  outputs.nix  packages.nix
website/: config.toml  devshell.nix
(+145 files in other folders)
