[package]
name = "censorlab"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
byteorder = "1.4"
clap = { version = "4.0", features = ["cargo", "derive"] }
coz = "0.1.3"
# epoll = {version = "4.3" }
fnv = "1.0.7"
get_if_addrs = "0.5"
iptables = "0.5"
lalrpop-util = { version = "0.20.0", features = ["lexer", "regex", "unicode"] }
libc = "*"
mac_address = "1.1"
nfq = "0.2"
num = "0.4.0"
onnxruntime = "0.0.14"
pcap-parser = "0.14"
procfs = "0.14"
regex = "1.9.1"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", features=["jit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.0.0"
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", branch="main", default-features=false, features=["proto-ipv4", "proto-ipv6", "std", "medium-ethernet", "medium-ip", "phy-raw_socket", "socket-raw"] }
thiserror = "1.0"
tokio = {version="1.23", features=["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"]}
tokio-byteorder = "0.3"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }

[build-dependencies]
lalrpop = "0.20.0"

[features]
default = []

[profile.release]
debug = 1
