[package]
name = "censorlab"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0"
byteorder = "1.4"
clap = { version = "4", features = ["cargo", "derive"] }
coz = "0.1"
dns-parser = "0.8.0"
# epoll = {version = "4.3" }
fnv = "1.0"
get_if_addrs = "0.5"
iptables = "0.5"
lalrpop-util = { version = "0.21", features = ["lexer", "unicode"] }
libc = "*"
mac_address = "1.1"
nfq = "0.2"
num = "0.4"
onnxruntime = "0.0.14" 
pcap-parser = "0.16"
procfs = "0.16"
regex = "1.10"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", features=["jit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", branch="main", default-features=false, features=["proto-ipv4", "proto-ipv6", "std", "medium-ethernet", "medium-ip", "phy-raw_socket", "socket-raw"] }
thiserror = "1"
tokio = {version="1.40", features=["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"]}
tokio-byteorder = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }

[build-dependencies]
lalrpop = "0.21"

[features]
default = []
wire = []

[profile.release]
debug = 1
